content/terraform-migrate/v1.0.x/docs/migrate/reference/execute.mdx
---
page_title: tf-migrate execute reference
description: >-
  The `tf-migrate execute` command runs a prepared migration to migrate locally existing state to HCP Terraform or Terraform Enterprise.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-08-07T22:55:42-04:00
last_modified: 2025-08-07T22:55:42-04:00
# END AUTO GENERATED METADATA
---

# `tf-migrate execute` reference

The `tf-migrate execute` command directs Terraform to run the `init`, `plan`, and `apply` commands on the configuration generated with the `tf-migrate prepare` command. 

## Usage

```
$ tf-migrate execute
```

## Description

The `tf-migrate execute` command creates the project and workspace in HCP Terraform or Terraform Enterprise, migrates the existing state, and updates your configuration to replace the `backend` block with the `cloud` block. If you responded to the prompt in the prepare workflow to create a pull request, `tf-migrate` creates the pull request after it completes the migration.

When Terraform migrate completes the migration, it displays the number of workspaces migrated, a link to each HCP Terraform workspace, and a link to the GitHub pull request if you configured it to create one.

## Example

The `tf-migrate execute` command automatically performs the migration and code updates. 

<CodeBlockConfig hideClipboard>

```
$ tf-migrate execute
✓ Init command ran successfully
✓ Plan command ran successfully and changes are detected
✓ Apply command ran successfully
Apply complete! Resources: 7 added, 0 changed, 0 destroyed.


Migration Summary
┌───────────────────────────────┬───────┐
│             Metric            │ Count │
├───────────────────────────────┼───────┤
│ Number of Projects Migrated   │     2 │
│ Number of Directories Skipped │     0 │
│ Number of New Workspaces      │     2 │
│ Number of Variables Migrated  │     8 │
└───────────────────────────────┴───────┘
┌───────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                           Workspace URLs                                          │
├───────────────────────────────────────────────────────────────────────────────────────────────────┤
│ https://app.terraform.io/<ORG>/workspaces/web_default                                             │
│ https://app.terraform.io/<ORG>/workspaces/api_default                                             │
└───────────────────────────────────────────────────────────────────────────────────────────────────┘
┌────────────────────────────────────────────────────────────────────────┐
│                            Pull Request Link                           │
├────────────────────────────────────────────────────────────────────────┤
│ https://github.com/<ORG>/learn-terraform-migrate/pull/1                │
└────────────────────────────────────────────────────────────────────────┘
```

</CodeBlockConfig>


## Available options

You can include the following flags when you run the `tf-migrate execute` command:

| Option | Description | Default | Required |
| ------ | ----------- | ------- | -------- |
| `-dry-run` | If set, Terraform migrate only shows the output from the `terraform plan` step, and does not perform the migration. | None | No |